--- a/src/index.css
+++ b/src/index.css
@@ -136,6 +136,7 @@ a , a:hover{
 .nav-link.active{
     border: 1px solid var(--main-color);
     border-radius: 7px;
+    padding-left:5px ;
 }
 .nav-link{
    padding: 0 5px;
